refactor(helm): simplify resource names by removing '-store' suffix from deployment, route, and service templates

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-store
+  name: {{ .Release.Name }}
   labels:
     app: darwin-store
     app.kubernetes.io/name: darwin-store
