chore(helm): move annotations for service discovery to pod level in deployment and postgres templates
This commit relocates the service discovery annotations from the metadata section to the pod annotations in both the deployment and postgres templates, ensuring that the necessary metadata is directly associated with the pods for better visibility and management.

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -7,12 +7,6 @@ metadata:
     app: darwin-store
     app.kubernetes.io/name: darwin-store
     app.kubernetes.io/instance: {{ .Release.Name }}
-  annotations:
-    darwin.io/monitored: "true"
-    darwin.io/service-name: "darwin-store"
-    darwin.io/source-repo: "https://github.com/The-Darwin-Project/Store.git"
-    darwin.io/gitops-repo: "https://github.com/The-Darwin-Project/Store.git"
-    darwin.io/config-path: "helm/values.yaml"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -24,12 +18,17 @@ spec:
       labels:
         app: darwin-store
         app.kubernetes.io/instance: {{ .Release.Name }}
-        gemini-cli-force-sync: "true"
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
         {{- if .Values.restartedAt }}
         kubectl.kubernetes.io/restartedAt: {{ .Values.restartedAt | quote }}
         {{- end }}
+        # Darwin service discovery -- Observer reads these from pods
+        darwin.io/monitored: "true"
+        darwin.io/service-name: "darwin-store"
+        darwin.io/source-repo: "https://github.com/The-Darwin-Project/Store.git"
+        darwin.io/gitops-repo: "https://github.com/The-Darwin-Project/Store.git"
+        darwin.io/config-path: "helm/values.yaml"
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
