--- a/.github/workflows/ci-branch.yaml
+++ b/.github/workflows/ci-branch.yaml
@@ -81,6 +81,7 @@ jobs:
             tests/test_redesign.py \
             tests/test_unassigned_orders.py \
             tests/verify_customers_api.py \
+            tests/test_invoices_qe.py \
             -v --tb=short
 
       - name: Test summary
