fix(deploy): use python3 in init container command (no python symlink in UBI9)

--- a/helm/templates/deployment-backend.yaml
+++ b/helm/templates/deployment-backend.yaml
@@ -42,7 +42,7 @@ spec:
         - name: wait-for-postgres
           image: "{{ .Values.image.backend.repository }}:{{ .Values.image.backend.tag }}"
           command:
-            - python
+            - python3
             - -c
             - |
               import socket, time, sys
