feat(infra): update Dockerfile.frontend and nginx for React SPA
- Dockerfile.frontend: multi-stage build (Node 22 → nginx on UBI9)
  Stage 1 runs npm ci + npm run build, Stage 2 copies dist/ to nginx
- nginx/default.conf: SPA fallback (try_files $uri /index.html),
  Vite hashed assets with 1y cache, all API proxy routes preserved
- CI paths: add frontend/** to trigger paths
- .gitignore: exclude frontend/dist/

--- a/.github/workflows/ci-branch.yaml
+++ b/.github/workflows/ci-branch.yaml
@@ -22,6 +22,7 @@ on:
       - "refactor/**"
     paths:
       - "src/**"
+      - "frontend/**"
       - "tests/**"
       - "Dockerfile.*"
       - "nginx/**"
