--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,19 +6,13 @@ server {
     listen 8080;
     server_name _;
 
-    # Static files served directly
+    # Vite build output served from here
     root /usr/share/nginx/html;
+    index index.html;
 
-    location = / {
-        try_files /index.html =404;
-    }
-
-    location = /admin {
-        try_files /admin.html =404;
-    }
-
-    location /static/ {
-        expires 1h;
+    # Vite hashed assets -- long cache
+    location /assets/ {
+        expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
@@ -133,5 +127,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # SPA fallback -- serve index.html for all non-API, non-asset routes
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
