ops(darwin-store): enable post-deploy Playwright tests
Set postDeployTests.enabled=true so ArgoCD PostSync hook runs the
Playwright smoke tests after each sync and posts results to the
chaos controller /api/test-reports endpoint.

All 4 steps of the post-deploy test architecture are merged (PRs #68-#70),
playwright image exists (ghcr.io/the-darwin-project/store-playwright:4da36ff).
Enabling the feature flag to activate the pipeline.

Ref: evt-568243ca

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -141,7 +141,7 @@ config:
     enabled: false
 # -- Post-deploy smoke tests (ArgoCD PostSync hook)
 postDeployTests:
-  enabled: false
+  enabled: true
   image:
     repository: ghcr.io/the-darwin-project/store-playwright
     tag: "4da36ff"
